# 2025-puzzle

./: .gitignore  Background_information.md  MediaGen.nb  README.md  introduction-on-byr.txt  introduction-on-chaoli.txt  introduction-on-tuilixy.txt  剧情.md  谜题.md  谜题解答.md
Attachment/: CubeMaze.ggb  Cube_maze.nb  JulianCalendar2024.xlsx  Map.xlsx
BesiegeWithoutAssault/: README.md  calculate.py  test.ts
BesiegeWithoutAssault/lib/: coordinate.ts  operate.ts  preset.ts
CAPTCHA/: .gitignore  README.md  imgdiv.py
CAPTCHA/bug/: gen.tex  task.sh
CAPTCHA/chordate/: gen.tex  task.sh
CAPTCHA/math/: gen.tex
CAPTCHA/resistor/: gen.tex
CAPTCHA/tone/: gen.tex  task.sh
CAPTCHA/unit/: gen.tex
CatchGlowworm/: .gitignore  CMakeLists.txt  README.md  cal.py
CatchGlowworm/include/: coordinate.hpp  operate.hpp  preset.hpp
CatchGlowworm/lib/: calculator.cpp  initialize.cpp  move.cpp
CatchGlowworm/src/: cg.cpp  solve.cpp
CountLightsOff/: CMakeLists.txt  README.md
CountLightsOff/include/: gaussian.hpp  operate.hpp  preset.hpp
CountLightsOff/lib/: click.cpp  gaussian.cpp  getcoef.cpp  initialize.cpp
CountLightsOff/src/: clo.cpp  solve.cpp
CountLightsOut/: .gitignore  CMakeLists.txt  README.md  test.ts
CountLightsOut/include/: gaussian.hpp  random.hpp
CountLightsOut/lib/: gaussian.cpp  operate.ts
CountLightsOut/src/: solve.cpp
DigitalCircuit/: CMakeLists.txt  README.md  test.ts
DigitalCircuit/include/: operate.hpp  preset.hpp
DigitalCircuit/lib/: floyd.cpp  signal.cpp  signal.ts
DigitalCircuit/src/: analyze.cpp  karnaugh.cpp  simulator.cpp  solve.cpp
EncryptedDialog/: .gitignore  README.md  game.py  generate_map.py  input.json  output.json  simulator.py
GuessNumber/: README.md
MinesOrMap/: .compute.py  .gitignore  Entrance.md  README.md  check.sh  convert.py  origin.txt
WhatHappened/: README.md
